MLKit NEWS file

 * mael 2007-03-22: Added mlkit-mlyacc executable and man-pages for
   mlkit-mlyacc and mlkit-mllex.

 * mael 2007-03-12: Added mlkit-mllex executable by including a
   modified copy of mllex from SML/NJ 110.60. The copy of the source
   code is in src/Tools/ml-lex. The source code is compiled with
   either mlton or with mlkit, depending on the setting of MLCOMP at
   configure-time.

 * mael 2006-10-29: Applied patch by Vesa Karvonen. The patch:

     - Exposes the Basis library Text : TEXT module, which wasn't
       exposed for some reason and also removes the opaque signature
       ascription which would (incorrectly) generate new types char,
       string, vector, ...

     - Extends the MLB parser to handle an arbitrary number of
       annotations in MLB files.  Unrecognized annotations result in a
       warning and have no other semantic effect.

     - Extends the MLB lexer to recognize simple quoted strings.  This
       is required to parse MLton's annotations properly.

     - Extends the expansion of MLB path variables so that path
       variables are allowed at any position of a path rather than
       just at the beginning.

   --Vesa Karvonen

              **** MLKit version 4.3.0 is released ****

 * mael 2006-01-27: Summary of major changes since 4.1.4

      - Updated Basis Library

      - Support for separate compilation with MLB-files

      - Garbage collection of regions is now the default

      - Improved documentation - man-pages, wiki, etc.

      - Various bug-fixes

 * mael 2006-01-27: Added Makefile entry for constructing a source
   distribution (in directory kit/dist/). Run 'make mlkit_src_tgz'.

 * mael 2006-01-26: Added Makefile entry for constructing a binary
   distribution (in directory kit/dist/). After running 'make
   bootstrap' (see below), run 'make mlkit_i386_tgz'.

 * mael 2006-01-26: Simplified the bootstrap process: after running
   './configure' and 'make nj', simply run 'make bootstrap'; see the